--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@fortawesome/angular-fontawesome": "0.5",
     "@fortawesome/fontawesome-svg-core": "^1.2.22",
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
-    "bulma": "^0.7.5",
+    "ng-zorro-antd": "^8.3.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
